fix spacing of list elements, title in header

--- a/src/scss/_lesson.scss
+++ b/src/scss/_lesson.scss
@@ -253,22 +253,12 @@ LessonContent .content {
         margin: 0.3em 0;
     }
 
-    ul,
-    ol {
-        padding-left: 20px;
-    }
-
     p.media-description {
         font-size: 18px;
     }
 
     p.error-message {
         color: red;
-    }
-
-    .speaker,
-    .film {
-        margin: 0 auto;
     }
 }
 
