--- a/src/scss/_top_menu.scss
+++ b/src/scss/_top_menu.scss
@@ -34,7 +34,7 @@ TopMenu {
         display: inline-block;
     }
 
-    a.top-icon {
+    .top-icon {
         position: absolute;
         top: 15px;
         -webkit-mask-position: center;
