--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -105,6 +105,7 @@ ol {
     font-size: 13px;
     color: $gray-3;
     font-weight: 300;
+    list-style-position: inside;
 }
 
 // lists within lists
